# vhdl-style-guide

./: .codespell-ignore  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  test.vhd  test.vhd.bak  test.yml  tox.ini
docs/: Makefile  after_rules.rst  aggregate_rules.rst  alias_declaration_rules.rst  api.rst  architecture_010.rst  architecture_024.rst  architecture_rules.new.rst  architecture_rules.rst  array_constraint_rules.rst  assert_rules.rst  attribute_declaration_rules.rst  attribute_rules.rst  attribute_specification_rules.rst  bit_string_literal_rules.rst  block_comment_rules.rst  block_rules.rst  case_generate_alternative_rules.rst  case_generate_statement_rules.rst  case_rules.rst  choice_rules.rst  code_tags.rst  comment_rules.rst  component_rules.rst  concurrent_rules.rst  concurrent_selected_signal_assignment_rules.rst  conditional_expressions_rules.rst  conditional_waveforms_rules.rst  conf.py  configuring.rst  configuring_array_multiline_structure_rules.rst  configuring_blank_lines.rst  configuring_block_comments.rst  configuring_case.rst  configuring_comment_indenting.rst  configuring_comment_keywords.rst  configuring_concurrent_alignment_rules.rst  configuring_concurrent_procedure_call_statement_rules.rst  configuring_conditional_expressions.rst  configuring_conditional_expressions_structure_rules.rst  (+181 more)
docs_orig/: attribute_declaration_rules.rst  attribute_specification_rules.rst  code_tags.rst  component_rules.rst  icons.rst  library_rules.rst  loop_statement_rules.rst  multiple_configurations.rst  pragmas.rst  rule_severity.rst  subprogram_body_rules.rst  subtype_rules.rst  update.sed  vsg.rule_list.rst  when_rules.rst  while_loop_rules.rst  whitespace_rules.rst
modules/: line.py  rule.py  rule_architecture.py  rule_comment.py  rule_component.py  rule_concurrent.py  rule_constant.py  rule_entity.py  rule_generic.py  rule_if.py  rule_library.py  rule_list.py  rule_port.py  rule_process.py  rule_sequential.py  rule_signal.py  rule_whitespace.py  vhdlFile.py
tests/: configuring_uppercase_and_lowercase_rules.rst  rules.rst  utils.py
vsg/: '  CustomArgumentParser.py  __init__.py  __main__.py  __parser__.py  __rule_doc_gen__.py  apply_rules.py  blah.json  block_rule.py  check.py  cmd_line_args.py  config.py  data_structure.py  decorators.py  deprecated_rule.py  depricated_rule.py  exceptions.py  fix.py  fix_item.py  install.py  junit.py  line.py  parser.py  prerequisite.py  program_config.py  proposed_rule.py  rule.py  tokens.py  (+12 more)
(+8624 files in other folders)
