[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vsg"
description = "VHDL Style Guide"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: General",
]
keywords = [
    "beautify",
    "guide",
    "lint",
    "style",
    "vhdl",
]
dynamic = [
    "version",
]
readme = "README.rst"
requires-python = ">=3.8"

dependencies = [
    "PyYAML>=5.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.2.0",
    "pylint",
    "wheel",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-html-reporter",
    "pytest-xdist[psutil]",
]
docs = [
    "docutils",
    "readthedocs-sphinx-search",
    "sphinx",
    "sphinx_rtd_theme",
]

[[project.authors]]
name = "Jeremiah C Leary"
email = "jeremiah.c.leary@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jeremiah-c-leary/vhdl-style-guide"
Download = "https://github.com/jeremiah-c-leary/vhdl-style-guide"

[project.scripts]
vsg = "vsg.__main__:main"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"

[tool.setuptools.package-data]
"vsg.rules" = [
    "*/preamble_doc.rst",
]
"vsg.styles" = [
    "*.yaml",
]
"vsg.styles.code_examples" = [
    "README.rst",
]
"vsg.vhdlFile.indent" = [
    "*.yaml",
]

[tool.setuptools.packages.find]
exclude = [
    "bin*",
    "build*",
    "docs*",
    "tests*",
]

[tool.black]
line-length = 160

[tool.pylint.MASTER]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.FORMAT]
max-line-length = 160

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=vsg",
    "--import-mode=importlib",
    "--self-contained-html",
    "-n", "auto",
    "-ra",
]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
parallel = true
branch = true
source = [
    "vsg",
]
data_file = "${COVERAGE_DATA_FILE-.coverage}"

[tool.coverage.report]
show_missing = true

[tool.check-manifest]
ignore = [
    "*.egg-info",
    "*.egg-info/*",
    "PKG-INFO",
    "setup.cfg"
]
ignore-default-rules = true
